SERVER-15838 Make replSetInitiate return InvalidRepliaSetConfig on problems with the config